jvm gc algorithm learn note